# get-simulator

./: .cproject  .hgignore  .project  CMakeLists.txt  FindCellmlLibraries.cmake  FindLibCSim.cmake  FindLibCsedml.cmake  FindLibSBML.cmake  FindSUNDIALS.cmake  README.rst
docs/: readme.docx
src/: GeneralModel.cpp  GeneralModel.hpp  LattaNaTransportModel.cpp  LattaNaTransportModel.hpp  NewtonRaphson.cpp  NewtonRaphson.hpp  common.cpp  common.hpp  create_sedml.cpp  cvodes.cpp  cvodes.hpp  dataset.cpp  dataset.hpp  get-sed-ml-client.cpp  get-simulator.cpp  get.cpp  get_simulator_config.h.in  ida.cpp  ida.hpp  kinsol.cpp  kinsol.hpp  kinsolExample.cpp  kinsolExample.hpp  molecule.cpp  molecule.hpp  plotting.cpp  plotting.hpp  sedml.cpp  sedml.hpp  setvaluechange.hpp  simulationenginecsim.cpp  simulationenginecsim.hpp  simulationengineget.cpp  simulationengineget.hpp  utilityclasses.hpp  utils.cpp  utils.hpp
testing/latta/: SS.gnu  figs-8-9.gnu  transition-to-short-circuit.gnu
testing/latta/saved-results/: SS.results  results.data
